@@ -1,6 +1,6 @@
 ﻿using System;
 
-namespace AllOverIt.Exceptions
+namespace AllOverIt.Formatters.Exceptions
 {
     /// <summary>Represents on object self-reference error.</summary>
     public class SelfReferenceException : Exception
