@@ -1,6 +1,6 @@
 ﻿using System;
 
-namespace AllOverIt.Exceptions
+namespace AllOverIt.Process.Exceptions
 {
     /// <summary>Represents an error that occurred while executing an external process.</summary>
     public class ProcessException : Exception
