@@ -1,10 +1,10 @@
 ﻿using System;
 using System.Threading;
 using System.Threading.Tasks;
-using AllOverIt.Exceptions;
 using AllOverIt.Fixture;
 using AllOverIt.Fixture.Extensions;
 using AllOverIt.Patterns.Command;
+using AllOverIt.Patterns.Command.Exceptions;
 using FluentAssertions;
 using Xunit;
 
