@@ -1,7 +1,7 @@
-﻿using AllOverIt.Exceptions;
-using AllOverIt.Fixture;
+﻿using AllOverIt.Fixture;
 using AllOverIt.Fixture.Extensions;
 using AllOverIt.Patterns.ValueObject;
+using AllOverIt.Patterns.ValueObject.Exceptions;
 using FluentAssertions;
 using System;
 using Xunit;
